[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/Menu/title.png" type="Texture" id=1]
[ext_resource path="res://UI/Menu/logo.png" type="Texture" id=2]
[ext_resource path="res://UI/Menu/play_pressed.png" type="Texture" id=3]
[ext_resource path="res://UI/Menu/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://UI/Menu/play_shine.png" type="Texture" id=5]
[ext_resource path="res://UI/Menu/play.png" type="Texture" id=6]
[ext_resource path="res://UI/Menu/exit_shine.png" type="Texture" id=7]
[ext_resource path="res://UI/Menu/settings.png" type="Texture" id=8]
[ext_resource path="res://UI/Menu/exit.png" type="Texture" id=9]
[ext_resource path="res://UI/Menu/settings_pressed.png" type="Texture" id=10]
[ext_resource path="res://UI/Menu/exit_pressed.png" type="Texture" id=11]
[ext_resource path="res://UI/Menu/settings_shine.png" type="Texture" id=12]
[ext_resource path="res://UI/Menu/bitmask.bmp" type="BitMap" id=13]
[ext_resource path="res://UI/Menu/Settings.tscn" type="PackedScene" id=14]
[ext_resource path="res://Sound/Music/menu_placeholder.mp3" type="AudioStream" id=15]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 125.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 129.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="Menu/CenterRow"]
margin_right = 220.0
margin_bottom = 431.0
rect_min_size = Vector2( 220, 0 )

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 224.0
margin_right = 354.0
margin_bottom = 431.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 20
alignment = 1

[node name="Play" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 117.0
margin_right = 130.0
margin_bottom = 169.0
rect_min_size = Vector2( 130, 52 )
size_flags_stretch_ratio = 2.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
texture_click_mask = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Settings" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 189.0
margin_right = 130.0
margin_bottom = 241.0
rect_min_size = Vector2( 130, 52 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="Exit" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 261.0
margin_right = 130.0
margin_bottom = 313.0
rect_min_size = Vector2( 130, 52 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 358.0
margin_right = 1040.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 191.0
margin_top = 65.0
margin_right = 491.0
margin_bottom = 365.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
flip_h = true

[node name="Settings" parent="." instance=ExtResource( 14 )]

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="Menu/CenterRow/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Exit" to="." method="_on_Exit_pressed"]
